Fixed auth footer on mobile and bump version 2.0.112

--- a/src/scss/layout/auth/index.scss
+++ b/src/scss/layout/auth/index.scss
@@ -142,4 +142,9 @@
     align-items: unset;
     padding-top: 40px;
   }
+
+  footer {
+    position: relative;
+    text-align: center;
+  }
 }
